--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -42,22 +42,23 @@ body {
   display: flex;
 }
 
-ul {
+.centered-main-page-element__list {
   margin: 0;
   padding: 0px;
 }
 
-li,
-h3 {
+.centered-main-page-element__item,
+.centered-main-page-element__heading {
   list-style: none;
 }
 
-input,
-button {
+.centered-main-page-element__checkbox,
+.centered-main-page-element__task,
+.centered-main-page-element__button {
   outline: none;
 }
 
-button {
+.centered-main-page-element__button {
   background: none;
   border: 0px;
   color: #888;
@@ -67,13 +68,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.centered-main-page-element__button:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for='new-task'] {
+.centered-main-page-element__heading,
+[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -83,7 +84,7 @@ label[for='new-task'] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -96,22 +97,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.centered-main-page-element__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -121,46 +122,47 @@ li {
   align-items: center;
 }
 
-li>* {
+.centered-main-page-element__item {
   vertical-align: middle;
 }
 
-li>input[type="checkbox"] {
+[type="checkbox"] {
   margin: 0 10px;
 }
 
-li>label {
+.centered-main-page-element__task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+[type="text"] {
   width: 226px
 }
 
-button.delete img {
+.centered-main-page-element__button-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.centered-main-page-element__button-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks {
   text-decoration: line-through color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+ul li input[type="text"] {
   display: none
 }
 
-ul li.edit-mode input[type=text] {
+
+ul li.edit-mode input[type="text"] {
   display: inline-block;
   width: 224px
 }
